--- a/apps/frontend/Pages/Shared/Components/Tables/StoreTable.razor
+++ b/apps/frontend/Pages/Shared/Components/Tables/StoreTable.razor
@@ -36,7 +36,7 @@
 </table>
 
 @code {
-  [Parameter] public List<Store> PagedStores { get; set; } = new();
+  [Parameter] public List<StoreDto> PagedStores { get; set; } = new();
   [Parameter] public int CurrentPage { get; set; }
   [Parameter] public int PageSize { get; set; }
 
